--- a/templates/register.html
+++ b/templates/register.html
@@ -5,21 +5,21 @@
 {% block body %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-light">
+        <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingLogin" placeholder="name@example.com">
+            <input type="text" name='Login' class="form-control" id="floatingLogin" placeholder="Login">
             <label for="floatingLogin">Логин</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+            <input type="email" name="Email" class="form-control" id="floatingEmail" placeholder="name@example.com">
             <label for="floatingEmail">Адрес эл.почты</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" name="Password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Пароль</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPasswordRepeat" placeholder="Password">
+            <input type="password" name="RepeatPassword" class="form-control" id="floatingPasswordRepeat" placeholder="Password">
             <label for="floatingPasswordRepeat">Повторите пароль</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Создать аккаунт</button>
