--- a/templates/success_register.html
+++ b/templates/success_register.html
@@ -4,12 +4,11 @@
 {% endblock %}
 {% block body %}
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Привет!</h1>
+    <h1 class="display-5 fw-bold">Регистрация прошла успешно!</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Если ты ещё не зарегистрирован, можешь сделать это прямо сейчас</p>
+      <p class="lead mb-4">Теперь необходимо войти в аккаунт</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a href="/login"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Войти</button></a>
-        <a href="/register"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Регистрация</button></a>
       </div>
     </div>
   </div>
