--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Если ты ещё не зарегистрирован, можешь сделать это прямо сейчас</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="/login"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Войти</button></a>
+        <a href="/account"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Войти</button></a>
         <a href="/register"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Регистрация</button></a>
       </div>
     </div>
