--- a/templates/login.html
+++ b/templates/login.html
@@ -10,13 +10,13 @@
         <p class="col-lg-10 fs-4">Мы делаем всё, чтобы сохранить Вашу приватность. Но не забывайте о безопастности! Держите в секрете данные своей учётной записи. Общайте внимание на адрес сайта.</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-light">
+        <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input name="Login" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Логин</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input name="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Пароль</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
