Small updates and add file loading

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
 
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 text-dark text-decoration-none" href="#">Премиум</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Поддержка</a>
-            <a class="py-2 text-dark text-decoration-none" href="/about">О нас</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/support">Поддержка</a>
+            <a class="py-2 text-dark text-decoration-none" href="#">О нас</a>
           </nav>
         </div>
         {% block body %}{% endblock %}
