--- a/templates/login_error.html
+++ b/templates/login_error.html
@@ -11,6 +11,7 @@
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+          <p>Вы ввели неверный логин или пароль</p>
           <div class="form-floating mb-3">
             <input name="Login" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Логин</label>
