--- a/templates/account.html
+++ b/templates/account.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'login_base.html' %}
 {% block title %}
 Яндекс.Лицей.Облако
 {% endblock %}
 {% block body %}
-    <h1>Вы успешно вошли в аккаунт! </h1>
     <h3>Загрузить новый файл</h3>
     <form action="" method=post enctype=multipart/form-data>
       <p><input type=file name=File>
