Add pages and logic

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+          <p>{{ message }}</p>
           <div class="form-floating mb-3">
             <input name="Login" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Логин</label>
@@ -21,7 +22,7 @@
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
           <hr class="my-4">
-          <small class="text-muted">Нажимая кнопку Войти, Вы подтверждаете согласие с <a href="#">Политикой сайта</a></small>
+          <small class="text-muted">Нажимая кнопку Войти, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
         </form>
       </div>
     </div>
