--- a/templates/politic.html
+++ b/templates/politic.html
@@ -3,6 +3,8 @@
 Яндекс.Лицей.Облако
 {% endblock %}
 {% block body %}
-    <h1>Поздравляю! Она не работает :)</h1>
+  <div class="m-5">
+    <h2>Политика сайта</h2>
+    <p>Пока что тут пусто :(</p>
+  </div>
 {% endblock %}
-
