--- a/templates/account.html
+++ b/templates/account.html
@@ -1,17 +1,48 @@
-{% extends 'login_base.html' %}
+{% extends 'base.html' %}
 {% block title %}
 Яндекс.Лицей.Облако
 {% endblock %}
 {% block body %}
-    <h3>Загрузить новый файл</h3>
-    <form action="" method=post enctype=multipart/form-data>
-      <p><input type=file name=File>
-         <input type=submit value=Загрузить>
-    </form>
-    {% for file in files %}
-        <div class="alert alert-info">
-            <h2>{{ file.name  }}</h2>
-            <a href="{{ file.path }}" class="btn">Скачать</a>
-        </div>
-    {% endfor %}
+  <form method=post enctype=multipart/form-data>
+    <p><input id="file-input" hidden type=file name=File>
+  <section class="py-5 text-center container">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light">Ваше хранилище</h1>
+        <p class="lead text-muted">Загрузить файл</p>
+        <p>
+          <label for="file-input" class="btn btn-secondary my-2">Выберите файл</label>
+          <input class="btn btn-primary my-2" type=submit value=Загрузить>
+        </p>
+      </div>
+    </div>
+  </section>
+  </form>
+{% if not files %}
+  <p class="text-center lead text-muted">Здесь будут ваши файлы</p>
+{% else %}
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+        {% for file in files %}
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">{{ file.name  }}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+                    <a type="button" href="{{ file.path }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
+                  </div>
+                  <small class="text-muted">Дата</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+{% endif %}
 {% endblock %}
