--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,14 @@
           </a>
 
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Премиум</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/premium">Премиум</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/support">Поддержка</a>
-            <a class="py-2 text-dark text-decoration-none" href="#">О нас</a>
+            {% if login %}
+            <a class="me-3 py-2 text-dark text-decoration-none" href="#">О нас</a>
+            <a class="py-2 text-dark text-decoration-none" href="/logout">Выйти</a>
+            {% else %}
+            <a class="py-2 text-dark text-decoration-none" href="/about">О нас</a>
+            {% endif %}
           </nav>
         </div>
         {% block body %}{% endblock %}
