--- a/templates/premium.html
+++ b/templates/premium.html
@@ -5,11 +5,12 @@
 {% block body %}
 <div class="m-5">
     <h1 class="text-center m-5">Больше специально для тебя</h1>
+    <h2 class="text-center m-5 text-muted">Выбери свой план</h2>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Бесплатно</h4>
+            <h4 class="my-0 fw-normal">Бесплатный</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
@@ -19,7 +20,7 @@
               <li>-</li>
               <li>-</li>
             </ul>
-            <a href="/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Войти</a>
+            <a href="/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Начать</a>
           </div>
         </div>
       </div>
