--- a/templates/account.html
+++ b/templates/account.html
@@ -10,6 +10,9 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Ваше хранилище</h1>
         <p class="lead text-muted">Загрузить файл</p>
+        <p><b>Описание файла</b><br>
+          <textarea name="desc" id="desc" class="form-control"></textarea><br>
+        </p>
         <p>
           <label for="file-input" class="btn btn-secondary my-2">Выберите файл</label>
           <input class="btn btn-primary my-2" type=submit value=Загрузить>
@@ -35,6 +38,7 @@
                     <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                     <a type="button" href="{{ file.path }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
                   </div>
+                  <small class="text-muted">{{file.desc}}</small>
                   <small class="text-muted">Дата</small>
                 </div>
               </div>
