add date of files in branch main

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -39,7 +39,7 @@
                     <a type="button" href="{{ file.path }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
                   </div>
                   <small class="text-muted">{{file.desc}}</small>
-                  <small class="text-muted">Дата</small>
+                  <small class="text-muted">{{ file.date.date() }}</small>
                 </div>
               </div>
             </div>
