--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -35,11 +35,10 @@
                 <p class="card-text">{{ file.name  }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
-                    <a type="button" href="{{ file.path }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
+                    <a type="button" href="/remove/{{ file.id }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+                    <a type="button" href="{{ file.id }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
                   </div>
-                  <small class="text-muted">{{file.desc}}</small>
-                  <small class="text-muted">Дата</small>
+                  <small class="text-muted">{{file.date.isoformat()}}</small>
                 </div>
               </div>
             </div>
