--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -3,24 +3,14 @@
 Яндекс.Лицей.Облако
 {% endblock %}
 {% block body %}
-  <form method=post enctype=multipart/form-data>
-    <p><input id="file-input" hidden type=file name=File>
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Ваше хранилище</h1>
-        <p class="lead text-muted">Загрузить файл</p>
-        <p><b>Описание файла</b><br>
-          <textarea name="desc" id="desc" class="form-control"></textarea><br>
-        </p>
-        <p>
-          <label for="file-input" class="btn btn-secondary my-2">Выберите файл</label>
-          <input class="btn btn-primary my-2" type=submit value=Загрузить>
-        </p>
+        <a href="/load"><p class="lead btn btn-primary my-2">Загрузить файл</p></a>
       </div>
     </div>
   </section>
-  </form>
 {% if not files %}
   <p class="text-center lead text-muted">Здесь будут ваши файлы</p>
 {% else %}
@@ -35,10 +25,11 @@
                 <p class="card-text">{{ file.name  }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a type="button" href="{{ file.id }}" class="btn btn-sm btn-outline-primary">Скачать</a>
+                    <a type="button" href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
                     <a type="button" href="/remove/{{ file.id }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
-                    <a type="button" href="{{ file.id }}" class="btn btn-sm btn-outline-secondary">Скачать</a>
                   </div>
-                  <small class="text-muted">{{file.date.isoformat()}}</small>
+                  <small class="text-muted">{{ file.date.day }}.{{ file.date.month }}.{{ file.date.year }}</small>
                 </div>
               </div>
             </div>
