--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,8 @@
             <a class="me-3 py-2 text-dark text-decoration-none" href="/premium">Премиум</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/support">Поддержка</a>
             {% if login %}
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">О нас</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/messenger">Меседжер </a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/about">О нас</a>
             <a class="py-2 text-dark text-decoration-none" href="/logout">Выйти</a>
             {% else %}
             <a class="py-2 text-dark text-decoration-none" href="/about">О нас</a>
