--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -25,9 +25,9 @@
                 <p class="card-text">{{ file.name  }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" href="/download/{{ file.id }}" class="btn btn-sm btn-outline-primary">Скачать</a>
-                    <a type="button" href="/about/{{file.id}}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
-                    <a type="button" href="/remove/{{ file.id }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+                    <a type="button" href="/download/{{ file.path }}" class="btn btn-sm btn-outline-primary">Скачать</a>
+                    <a type="button" href="/about/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                    <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                   </div>
                   <small class="text-muted">{{ file.date.day }}.{{ file.date.month }}.{{ file.date.year }}</small>
                 </div>
