--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Яндекс.Лицей.Облако
+О нас
 {% endblock %}
 {% block body %}
 <h1 class="text-muted text-center m-5">Создатели</h1>
