--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <body>
         <div class="my_header d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <span class="fs-4">Яндекс.Лицей.Облако</span>
+            <span class="fs-4">lava-land.ru</span>
           </a>
 
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
