--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Яндекс.Лицей.Облако
+Поддержка
 {% endblock %}
 {% block body %}
 <div class="m-5 col-md-8">
