--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Яндекс.Лицей.Облако
+Хранилище
 {% endblock %}
 {% block body %}
   <section class="py-5 text-center container">
