--- a/app/templates/load.html
+++ b/app/templates/load.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Яндекс.Лицей.Облако
+Выложить файл
 {% endblock %}
 {% block body %}
   <form method=post enctype=multipart/form-data>
