--- a/app/templates/success_register.html
+++ b/app/templates/success_register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Яндекс.Лицей.Облако
+Регистрация
 {% endblock %}
 {% block body %}
   <div class="px-4 py-5 my-5 text-center">
