--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -15,7 +15,7 @@
                     <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
                 </a>
                 <div class="chat-about">
-                    <h6 class="m-b-0">Aiden Chavez</h6>
+                    <h6 class="m-b-0">{{friend.name}}</h6>
                     <small>Last seen: 2 hours ago</small>
                 </div>
             </div>
@@ -29,25 +29,15 @@
     </div>
     <div class="chat-history">
         <ul class="m-b-0">
+            {% for mes in messages %}
             <li class="clearfix">
                 <div class="message-data text-right">
-                    <span class="message-data-time">10:10 AM, Today</span>
+                    <span class="message-data-time">{{ mes.sent_date.time() }}</span>
                     <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
                 </div>
-                <div class="message other-message float-right"> Hi Aiden, how are you? How is the project coming along? </div>
+                <div class="message other-message float-right">{{ mes.text }}</div>
             </li>
-            <li class="clearfix">
-                <div class="message-data">
-                    <span class="message-data-time">10:12 AM, Today</span>
-                </div>
-                <div class="message my-message">Are we meeting today?</div>
-            </li>
-            <li class="clearfix">
-                <div class="message-data">
-                    <span class="message-data-time">10:15 AM, Today</span>
-                </div>
-                <div class="message my-message">Project has been already finished and I have results to show you.</div>
-            </li>
+            {% endfor %}
         </ul>
     </div>
     <div class="chat-message clearfix">
@@ -55,7 +45,9 @@
             <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-send"></i></span>
             </div>
-            <input type="text" class="form-control" placeholder="Enter text here...">
+            <form method="post">
+                <input name="message" type="text" class="form-control" placeholder="Enter text here...">
+            </form>
         </div>
     </div>
 </div>
