--- a/app/templates/load.html
+++ b/app/templates/load.html
@@ -9,12 +9,15 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Загрузка файла</h1>
-        <p class="lead text-muted"><b>Описание файла</b><br>
-          <textarea name="desc" id="desc" class="form-control"></textarea><br>
-        </p>
         <p>
           <label for="file-input" class="btn btn-secondary my-2">Выберите файл</label>
           <input class="btn btn-primary my-2" type=submit value=Загрузить>
+        </p>
+        <p class="lead text-muted"><b>Описание файла</b><br>
+          <textarea name="desc" id="desc" class="form-control"></textarea><br>
+        </p>
+        <p class="lead text-muted"><b>Доступ к файлу</b><br>
+          <p>Выбор прав доступа</p>
         </p>
       </div>
     </div>
