Remake pages and code structure

--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -30,7 +30,7 @@
             <h4 class="my-0 fw-normal">Классический</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">60₽<small class="text-muted fw-light">/мес.</small></h1>
+            <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>20 ГБ</li>
               <li>Можно делиться файлами</li>
@@ -47,14 +47,14 @@
             <h4 class="my-0 fw-normal">Профессиональный</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">180₽<small class="text-muted fw-light">/мес.</small></h1>
+            <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>200 ГБ</li>
+              <li>∞ ГБ</li>
               <li>Можно делиться файлами</li>
               <li>Возможность комментировать файлы</li>
               <li>Доступ к безопастному мессенджеру</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Купить</button>
+            <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш план</button>
           </div>
         </div>
       </div>
