--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -5,9 +5,11 @@
 {% block body %}
 <div class="m-5 col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
+        По всем вопросам вы можете обращаться на почту help@lava-land.ru
+      </h3>
+      <h3 class="pb-4 mb-4 fst-italic border-bottom">
         Что нового?
       </h3>
-
       <article class="blog-post">
         <h2 class="blog-post-title">Разработка проекта</h2>
         <p class="blog-post-meta">23 января, 2022 автор: Лаврентий</p>
