--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,25 +7,50 @@
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        <div class="my_header d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <span class="fs-4">lava-land.ru</span>
-          </a>
-
-          <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/premium">Премиум</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/support">Поддержка</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/about">Мы</a>
-            {% if login %}
-              <a class="me-3 py-2 text-dark text-decoration-none" href="/account">Хранилище</a>
-              <a class="me-3 py-2 text-dark text-decoration-none" href="/messenger">Меседжер</a>
-              <a class="py-2 text-dark text-decoration-none" href="/logout">Выйти</a>
-            {% else %}
-              <a class="me-3 py-2 text-dark text-decoration-none" href="/login">Войти</a>
-              <a class="py-2 text-dark text-decoration-none" href="/register">Регистрация</a>
-            {% endif %}
-
-          </nav>
+        <div class="container">
+            <header class="my-header d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+              <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                <span class="fs-4">lava-land.ru</span>
+              </a>
+              <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                {% if pages[0] %}
+                  <li><a href="/cloud" class="nav-link px-2 if">Хранилище</a></li>
+                {% else %}
+                  <li><a href="/cloud" class="nav-link px-2 if link-dark">Хранилище</a></li>
+                {% endif %}
+                {% if pages[1] %}
+                  <li><a href="/messenger" class="nav-link px-2">Мессенджер</a></li>
+                {% else %}
+                  <li><a href="/messenger" class="nav-link px-2 link-dark">Мессенджер</a></li>
+                {% endif %}
+                {% if pages[2] %}
+                  <li><a href="/premium" class="nav-link px-2">Премиум</a></li>
+                {% else %}
+                  <li><a href="/premium" class="nav-link px-2 link-dark">Премиум</a></li>
+                {% endif %}
+                {% if pages[3] %}
+                  <li><a href="/support" class="nav-link px-2">Поддержка</a></li>
+                {% else %}
+                  <li><a href="/support" class="nav-link px-2 link-dark">Поддержка</a></li>
+                {% endif %}
+                {% if pages[4] %}
+                  <li><a href="/about" class="nav-link px-2">О нас</a></li>
+                {% else %}
+                  <li><a href="/about" class="nav-link px-2 link-dark">О нас</a></li>
+                {% endif %}
+              </ul>
+              {% if login %}
+                <div class="col-md-3 text-end">
+                  <a href="/account"><button type="button" class="btn btn-primary  me-2">Аккаунт</button></a>
+                  <a href="/logout"><button type="button" class="btn btn-outline-primary ">Выйти</button></a>
+                </div>
+              {% else %}
+              <div class="col-md-3 text-end">
+                <a href="/login"><button type="button" class="btn btn-outline-primary me-2">Войти</button></a>
+                <a href="/register"><button type="button" class="btn btn-primary">Регистрация</button></a>
+              </div>
+              {% endif %}
+            </header>
         </div>
         {% block body %}{% endblock %}
     </body>
