--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,7 +10,7 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Лаврентий Наумов</font></font></h2>
-        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Не бойся пробовать. Часто самое худшее, что может произойти, это то, что произодёт, если не попробовать</font></font></p>
+        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Не бойся пробовать. Часто самый плохой вариант - это не попробовать.</font></font></p>
         <p><a class="btn btn-secondary" href="https://vk.com/prostolavr"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Заглянуть в вк</font></font></a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
