--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -29,7 +29,7 @@
                     <a type="button" href="/about/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
                     <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                   </div>
-                  <small class="text-muted">{{ file.date.day }}.{{ file.date.month }}.{{ file.date.year }}</small>
+                  <small class="text-muted">{{ file.date.strftime("%m.%d.%Y") }}</small>
                 </div>
               </div>
             </div>
