Add editing file

--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -26,7 +26,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a type="button" href="/download/{{ file.path }}" class="btn btn-sm btn-outline-primary">Скачать</a>
-                    <a type="button" href="/about/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                    <a type="button" href="/edit_file/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
                     <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                   </div>
                   <small class="text-muted">{{ file.date.strftime("%m.%d.%Y") }}</small>
