Add editing file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,9 +14,9 @@
               </a>
               <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 {% if pages[0] %}
-                  <li><a href="/cloud" class="nav-link px-2 if">Хранилище</a></li>
+                  <li><a href="/cloud" class="nav-link px-2">Хранилище</a></li>
                 {% else %}
-                  <li><a href="/cloud" class="nav-link px-2 if link-dark">Хранилище</a></li>
+                  <li><a href="/cloud" class="nav-link px-2 link-dark">Хранилище</a></li>
                 {% endif %}
                 {% if pages[1] %}
                   <li><a href="/messenger" class="nav-link px-2">Мессенджер</a></li>
