--- a/app/templates/load.html
+++ b/app/templates/load.html
@@ -17,7 +17,18 @@
           <textarea name="desc" id="desc" class="form-control"></textarea><br>
         </p>
         <p class="lead text-muted"><b>Доступ к файлу</b><br>
-          <p>Выбор прав доступа</p>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="access" id="close" value=0 checked>
+            <label class="form-check-label" for="close">
+              Закрытый (никто не может посмотреть на этот файл)
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="access" id="open" value=1>
+            <label class="form-check-label" for="open">
+              Открытый (сможте делиться им с другими)
+            </label>
+          </div>
         </p>
       </div>
     </div>
