--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -14,12 +14,11 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>5 ГБ</li>
+            <p>5 ГБ</p>
+            <ul class="circle-list mt-3 mb-4">
               <li>Можно делиться файлами</li>
-              <li>-</li>
-              <li>-</li>
             </ul>
+            <br><br>
             <a href="/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Начать</a>
           </div>
         </div>
@@ -31,12 +30,12 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>20 ГБ</li>
+            <p>20 ГБ</p>
+            <ul class="circle-list list-unstyled mt-3 mb-4">
               <li>Можно делиться файлами</li>
-              <li>Возможность комментировать файлы</li>
-              <li>-</li>
+              <li>Доступ к мессенджеру</li>
             </ul>
+            <br>
             <button type="button" class="w-100 btn btn-lg btn-primary">Купить</button>
           </div>
         </div>
@@ -48,11 +47,11 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>∞ ГБ</li>
+            <p>∞ ГБ</p>
+            <ul class="circle-list list-unstyled mt-3 mb-4">
               <li>Можно делиться файлами</li>
-              <li>Возможность комментировать файлы</li>
-              <li>Доступ к безопастному мессенджеру</li>
+              <li>Доступ к мессенджеру</li>
+              <li>Абсолютная и безграничная власть</li>
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш план</button>
           </div>
