--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -36,7 +36,7 @@
               <li>Доступ к мессенджеру</li>
             </ul>
             <br>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Купить</button>
+            <a href="/get_premium" class="w-100 btn btn-lg btn-primary">Купить</a>
           </div>
         </div>
       </div>
