--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -36,12 +36,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-          <h2 class="featurette-heading"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Безопасность - это мы. Или почему мы лучше крупных IT-гигантов.</font></font></h2>
-        <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Лицо человека – очень сложная и отчетливая часть его тела. </font><font style="vertical-align: inherit;">На самом деле, это одна из самых сложных сигнальных систем, которые у нас есть; </font><font style="vertical-align: inherit;">Он включает в себя более 40 независимых мышц, как структурно, так и функционально, так что каждая из них может работать независимо от другой; </font><font style="vertical-align: inherit;">Это один из самых сильных индикаторов эмоций.</font></font></p>
+          <h2 class="featurette-heading">Безопасность - это мы. Или почему мы лучше крупных IT-гигантов.</h2>
+        <p class="lead">Ваши данные находятся на удалённой машине. За счёт маршрутизации портов невозможно обратиться к ней по протоколу отличному от https. Использование при хранении на сервере неоригинальных имён файлов обеспечивает безопасность операционной системы. А используемые программные средства используют защиту памяти, исключая чтение загруженных в оперативную память данных. </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
       </div>
     </div>
 
@@ -49,11 +48,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Проект активно растёт и развивается. </font></font></h2>
-        <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Когда мы смеемся или плачем, мы демонстрируем свои эмоции, позволяя другим заглянуть в наш разум, «читая» наши лица на основе изменений в ключевых компонентах лица, таких как глаза, брови, веки, нос и губы.</font></font></p>
+        <h2 class="featurette-heading">Проект активно растёт и развивается.</h2>
+        <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему увеличивая количество функционала и его логику. Отсутствие популярности вынуждает искать удобные решения, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
 
       </div>
     </div>
@@ -62,11 +61,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ты знаешь Python3 + Flask? Мы ждём тебя! </font></font></h2>
-        <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Все мышцы в нашем теле поддерживаются нервами, соединенными со всеми частями тела со спинным и головным мозгом. </font><font style="vertical-align: inherit;">Эта нейронная связь является двунаправленной, а это означает, что нерв вызывает мышечные сокращения на основе сигналов мозга и в то же время отправляет информацию о состоянии мышц в мозг.</font></font></p>
+        <h2 class="featurette-heading">Ты знаешь Python3 + Flask? Мы ждём тебя!</h2>
+        <p class="lead">У нас невысокий порог прохода в команду. Всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
 
       </div>
     </div>
