Work with nginx. Test server release

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,30 +7,25 @@
 <div class="container marketing">
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Лаврентий Наумов</font></font></h2>
-        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Не бойся пробовать. Часто самый плохой вариант - это не попробовать.</font></font></p>
-        <p><a class="btn btn-secondary" href="https://vk.com/prostolavr"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Заглянуть в вк</font></font></a></p>
-      </div><!-- /.col-lg-4 -->
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+        <h2>Лаврентий Наумов</h2>
+        <p>Не бойся пробовать. Часто самый плохой вариант - это не попробовать.</p>
+        <p><a class="btn btn-secondary" href="https://vk.com/prostolavr">Заглянуть в вк</a></p>
+      </div>
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Демьян Бубнов</font></font></h2>
-        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Здесь будет большая и длинная цитата не крупным шрифтом вместо этого текста, который я сейчас максимально пытаюсь растянуть</font></font></p>
-        <p><a class="btn btn-secondary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Соц.сети?</font></font></a></p>
-      </div><!-- /.col-lg-4 -->
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+        <h2>Демьян Бубнов</h2>
+        <p>Здесь будет большая и длинная цитата не крупным шрифтом вместо этого текста, который я сейчас максимально пытаюсь растянуть</p>
+        <p><a class="btn btn-secondary" href="#">Соц.сети?</a></p>
+      </div>
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 140&nbsp;x&nbsp;140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+        <h2>Ты</h2>
+        <p>Покупая подписку ты поддерживаешь нас и становишься частью этого проекта! Любой вклад поможет проекту развиваться дальше</p>
+          <p><a class="btn btn-secondary" href="/premium">Поддержать</a></p>
+      </div>
+    </div>
 
-        <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ты</font></font></h2>
-        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Покупая подписку ты поддерживаешь нас и становишься частью этого проекта! Любой вклад поможет проекту развиваться дальше</font></font></p>
-          <p><a class="btn btn-secondary" href="/premium"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Поддержать</font></font></a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
 
     <hr class="featurette-divider">
 
@@ -40,7 +35,7 @@
         <p class="lead">Ваши данные находятся на удалённой машине. За счёт маршрутизации портов невозможно обратиться к ней по протоколу отличному от https. Использование при хранении на сервере неоригинальных имён файлов обеспечивает безопасность операционной системы. А используемые программные средства используют защиту памяти, исключая чтение загруженных в оперативную память данных. </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">Кто украл картинку?</text></svg>
       </div>
     </div>
 
@@ -52,7 +47,7 @@
         <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему увеличивая количество функционала и его логику. Отсутствие популярности вынуждает искать удобные решения, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">Кто украл картинку?</text></svg>
 
       </div>
     </div>
@@ -65,14 +60,12 @@
         <p class="lead">У нас невысокий порог прохода в команду. Всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x400</text></svg>
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">Кто украл картинку?</text></svg>
 
       </div>
     </div>
 
     <hr class="featurette-divider">
-
-    <!-- /END THE FEATURETTES -->
 
   </div>
 {% endblock %}
