--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -12,7 +12,9 @@
     </div>
   </section>
 {% if not files %}
-  <p class="text-center lead text-muted">Здесь будут ваши файлы</p>
+  <div class="py-5 bg-light">
+    <p class="text-center lead text-muted">Здесь будут ваши файлы</p>
+  </div>
 {% else %}
   <div class="album py-5 bg-light">
     <div class="container">
