Add history note

--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -11,17 +11,25 @@
         Что нового?
       </h3>
       <article class="blog-post">
+        <h2 class="blog-post-title">Бум нового функционала</h2>
+        <p class="blog-post-meta">15 апреля, 2022 автор: Лаврентий</p>
+
+        <p>Сегодня состоялся тестовый релиз нового функционала. Теперь можно делиться файлами (а можно и не делится), редактировать имена файлов и давать им описание, использовать кириллицу в названиях файлов, следить за датой загрузки файла и много всего ещё.</p>
+        <hr>
+        <p>Отныне можно сказать, что lava-land.ru - нерушимая крепость! Сайт был полностью переведён на протокол https.</p>
+        <hr>
+      </article>
+      <article class="blog-post">
         <h2 class="blog-post-title">Разработка проекта</h2>
         <p class="blog-post-meta">23 января, 2022 автор: Лаврентий</p>
 
         <p>Сегодня прошла встреча разработчиков, на которой было запланировано множество нового функционала. В ближайшее время ожидайте релиз!</p>
         <hr>
         <p>К релизу готовится следующий функционал. Возможность безопасно делиться файлами, обновление дизайна и страниц и даже встроенный мессенджер!</p>
-
+      </article>
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary disabled">Older</a>
         <a class="btn btn-outline-secondary disabled">Newer</a>
       </nav>
-
     </div>
 {% endblock %}
