--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -44,7 +44,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Проект активно растёт и развивается.</h2>
-        <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему увеличивая количество функционала и его логику. Отсутствие популярности вынуждает искать удобные решения, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
+        <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему, увеличивая количество функционала, и улучшая логику интерфейсов. Отсутствие популярности вынуждает искать удобные решения для того, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Заполнитель: 500&nbsp;x&nbsp;400" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">Кто украл картинку?</text></svg>
