--- a/app/static/css/messenger.css
+++ b/app/static/css/messenger.css
@@ -3,6 +3,13 @@ body{
     background-color: #f4f7f6;
     margin-top:20px;
 }
+.friend {
+    float: left; /* Обтекание справа */
+    border: 1px solid #333; /* Параметры рамки вокруг */
+    width: 300px; /* Ширина колонки */
+    padding: 5px; /* Поля вокруг текста */
+    margin: 10px 10px 20px 100px; /* Значения отступов */
+}
 .card {
     background: #fff;
     transition: .5s;
