--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -7,6 +7,18 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel='stylesheet' href="{{ url_for('static', filename='css/messenger.css') }}">
 
+
+<div class="friend">
+<form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+    <h1>Добавить друга</h1>
+    <p>{{ message }}</p>
+    <div class="form-floating mb-3">
+        <input type="text" name='Friend_Login' class="form-control" id="floatingLogin" placeholder="Friend_Login">
+        <label for="floatingLogin">Логин друга</label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
+</form>
+</div>
 <div class="container">
 <div class="row clearfix">
     <div class="col-lg-12">
