add friend system and fix some bugs

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -19,6 +19,9 @@
                     <small>Last seen: 2 hours ago</small>
                 </div>
             </div>
+            <div class="col-lg-6 hidden-sm text-right">
+                <a type="button" href="/messenger/decline_req/{{ friend.id }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+            </div>
         </div>
     </div>
     <div class="chat-history">
