--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -11,12 +11,36 @@
 <div class="friend">
 <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
     <h1>Добавить друга</h1>
-    <p>{{ message }}</p>
+    {% if message %}
+        <p>{{ message }}</p>
+    {% endif %}
     <div class="form-floating mb-3">
         <input type="text" name='Friend_Login' class="form-control" id="floatingLogin" placeholder="Friend_Login">
         <label for="floatingLogin">Логин друга</label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
+</form>
+</div>
+<div class="requests">
+<form class="p-4 p-md-5 border rounded-3 bg-light">
+<div id="plist" class="people-list">
+    <h2>Заявки в друзья</h2>
+    <ul class="list-unstyled chat-list mt-2 mb-0">
+        {% if not req %}
+            Пока нет заявок в друзья
+        {% endif %}
+        {% for r in req %}
+        <li class="clearfix">
+            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
+            <div class="about">
+                <div class="name">{{r[1]}}</div>
+                <a type="button" href="/messenger/accept_req/{{ r[0] }}" class="btn btn-sm btn-outline-primary">accept</a>
+                <a type="button" href="/messenger/decline_req/{{ r[0] }}" class="btn btn-sm btn-outline-secondary">decline</a>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 </form>
 </div>
 <div class="container">
