fix bugs with duble send friend request and premium

--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -16,7 +16,7 @@
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>5 ГБ</p>
             <ul class="circle-list mt-3 mb-4">
-              <li>Можно делиться файлами</li>
+              Можно делиться файлами
             </ul>
             <br><br>
             <a href="/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Начать</a>
@@ -32,8 +32,8 @@
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>20 ГБ</p>
             <ul class="circle-list list-unstyled mt-3 mb-4">
-              <li>Можно делиться файлами</li>
-              <li>Доступ к мессенджеру</li>
+              Можно делиться файлами<br>
+              Доступ к мессенджеру
             </ul>
             <br>
             <a href="/get_premium" class="w-100 btn btn-lg btn-primary">Купить</a>
@@ -49,9 +49,9 @@
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>∞ ГБ</p>
             <ul class="circle-list list-unstyled mt-3 mb-4">
-              <li>Можно делиться файлами</li>
-              <li>Доступ к мессенджеру</li>
-              <li>Абсолютная и безграничная власть</li>
+              Можно делиться файлами<br>
+              Доступ к мессенджеру<br>
+              Абсолютная и безграничная власть
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш план</button>
           </div>
