add picture to about.html

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -19,8 +19,8 @@
                     <small>Last seen: 2 hours ago</small>
                 </div>
             </div>
-            <div class="col-lg-6 hidden-sm text-right">
-                <a type="button" href="/messenger/decline_req/{{ friend.id }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+            <div class="col-lg-6 hidden-sm float-right">
+                <a type="button" href="/messenger/decline_req/{{ friend.id }}" class="btn btn-sm btn-outline-secondary">Удалить из друзей</a>
             </div>
         </div>
     </div>
